--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "heroku": "^10.6.0",
     "mongodb": "^6.15.0"
   }
 }
